src/styles/index.css
/* ... */
body {
  -webkit-font-smoothing: antialiased;
  font-family: "Urbanist", sans-serif;
}
html,
body,
#root {
  height: 100%;
}
/* width */
::-webkit-scrollbar {
  width: 5px;
}

/* Track */
::-webkit-scrollbar-track {
  background: #f1f1f1;
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: #3fc045;
  border-radius: 12px;
}

* {
  margin: 0px;
  padding: 0px;
}
.mb-8 {
  margin-bottom: 8px !important;
}
.mb-10 {
  margin-bottom: 10px !important;
}
.mb-12 {
  margin-bottom: 12px !important;
}
.mb-16 {
  margin-bottom: 16px !important;
}
.mb-18 {
  margin-bottom: 18px !important;
}
.mb-20 {
  margin-bottom: 20px !important;
}
.mobile-container {
  max-width: 376px;
  width: 100%;

  background-color: #fffefe;
  margin: 0px auto;
  border-radius: 2px;
}
.padding-20 {
  padding: 20px;
}
.mobile-container .back-link {
  height: 36px;
  width: 36px;
  border-radius: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: #f8f8f8;
  cursor: pointer;
  text-decoration: none;
  margin-bottom: 20px;
}
.back-link-title {
  display: flex;
  align-items: center;
  margin-bottom: 24px;
  width: 100%;
}
.back-link-title .back-link {
  margin-bottom: 0px;
}
.back-link-title .title {
  font-size: 18px;
  font-weight: bold;

  color: #212226;
  margin: 0px;
  margin-left: 12px;
}
.product-detail .title {
  font-weight: 700;

  color: var(--bs-body-color);
  font-size: 24px;
  margin-bottom: 5px;
  line-height: 1.1;
}
.product-detail .text {
  font-weight: 400;
  font-family: var(--body-font);
  color: var(--bs-primary);
  font-size: 14px;
  margin-bottom: 8px;
  line-height: 1.1;
}
.product-detail .review-info {
  padding: 10px 14px;
  border-radius: 67px;
  margin: auto;
  background-color: #ecf9ed;
  width: max-content;
  margin-bottom: 20px;
  border: 1px solid #eaedf3;
  max-width: 100%;
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 8px;
}
.product-detail .review-info .line {
  height: 15px;
  width: 1px;
  background-color: #eaedf3;
}
.product-detail .review-info .left {
  display: flex;
  align-items: center;
  gap: 6px;
}
.product-detail .review-info .left.flex-0 {
  flex-shrink: 0;
}
.product-detail .review-info .left .text {
  font-size: 13px;
  color: var(--bs-body-color);
  margin-bottom: 0px;
}
.product-detail .review-info .left .text .strong {
  font-weight: bold;
}
.product-detail .product-image {
  width: 100%;
  height: auto;
  margin-bottom: 20px;
  border-radius: 12px;
  position: relative;
}
.product-detail .product-image img {
  width: 100%;
  height: auto;
  max-height: 200px;
  border-radius: 12px;
  object-fit: cover;
}
.product-detail .product-image .icon {
  position: absolute;
  width: 32px;
  height: 32px;
  z-index: 1;
  border-radius: 50%;
  left: 16px;
  top: 16px;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: #f8f8f8;
  cursor: pointer;
}
.quantity-warpper {
  display: flex;
  justify-content: space-between;
  align-items: center;
}
.quantity-warpper .price {
  font-size: 30px;
  font-weight: bold;
  color: var(--bs-body-color);
  padding-left: 4px;
}
.quantity-warpper .price sup {
  font-size: 14px;
  font-weight: 700;
  top: -10px;
  left: -5px;
  color: #3fc045;
}
.quantity-warpper .right {
  display: flex;
  align-items: center;
  gap: 10px;
}
.quantity-warpper .right .count {
  width: 36px;
  height: 36px;
  display: flex;
  font-size: 11px;
  background-color: #f7f7fa;
  border-radius: 50%;
  justify-content: center;
  align-items: center;
  font-weight: 600;
  flex-shrink: 0;
  color: var(--bs-body-color);
  user-select: none;
}
.quantity-warpper .right .counter {
  height: 39px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  box-shadow: 7.3px 14.61px 21.91px 0px #00000003;
  background-color: #282a33;
  border-radius: 67px;
  gap: 3px;
  width: max-content;

  padding: 6px;
  padding-right: 3px;
}
.quantity-warpper .right .counter .button {
  cursor: pointer;
  width: 36px;
  height: 36px;
  border-radius: 50%;
  user-select: none;
  display: flex;
  justify-content: center;
  align-items: center;
  border: none;
  background-color: transparent;
}
.quantity-warpper .right .counter .button.dark {
  background-color: #363944;
  box-shadow: 7.3px 14.61px 21.91px 0px #00000003;
}
.hr {
  height: 1px;
  width: 100%;
  background-color: #eaedf3;
}
.small-title {
  font-size: 14px;
  font-weight: 700;
  color: var(--bs-body-color);
}
.medium-title {
  font-size: 16px;
  font-weight: 700;
  color: var(--bs-body-color);
}
.body-text {
  font-size: 12px;
  font-weight: 400;
  line-height: 1.3;
  color: #646568;
}
.body-text-med {
  font-size: 14px;
  font-weight: 400;
  line-height: 1.3;
  color: #646568;
}

.product-detail .product-info {
  font-weight: 500;
  color: var(--bs-body-color);
  border-radius: 12px;
  font-size: 12px;
  padding: 10px;
  padding-bottom: 30px;
  line-height: 16px;
  border: 1px solid #eaedf3;
  background-color: #f8f8f8;
}
.custom-accordian {
  display: flex;
  align-items: center;
  padding: 6px;
  border-radius: 67px;
  background-color: #3fc0451a;
}
.custom-accordian .button {
  border: none;
  background-color: transparent;
  font-size: 12px;
  font-weight: 500;
  padding: 10px;
  border-radius: 67px;
  max-width: 50%;
  transition: all 0.3s ease-in-out;
  flex: auto;
  color: black;
}
.custom-accordian .button:focus {
  border: none !important;
  outline: none !important;
  background-color: transparent;
}
.custom-accordian .button:hover {
  border: none !important;
  outline: none !important;
  color: white;
  background-color: #3fc045;
}
.custom-accordian .button.active {
  background-color: #3fc045;
  color: white;
}
.accordian-content {
  min-height: 150px;
  padding: 20px 0px;
}
.accordian-content .description-content {
  font-size: 14px;
  line-height: 22px;
  color: #797d81;
}
/* ... */

